fix: animated sidebar, fixed header logo jumping, added autoscroll feature to MapPlayer

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -213,10 +213,6 @@ ul {
   height: 24px;
 }
 
-.footer-partners-error {
-  color: var(--red-700);
-}
-
 .footer-author-rights {
   position: absolute;
   bottom: -35px;
