--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,7 +19,8 @@ a {
 .header-with-search-bar-open {
   display: grid;
   grid-template: 1fr / 56px 11fr;
-  gap: 32px;
+  column-gap: 32px;
+  height: 76px;
 }
 
 .header {
@@ -31,7 +32,7 @@ a {
   border-image: linear-gradient(to bottom, #cf121b, #cf121b00);
   border-image-slice: 1;
   width: 100%;
-  height: 80px;
+  height: 76px;
   margin-bottom: 7px;
 
   @media screen and (min-width: 1440px) {
@@ -284,8 +285,7 @@ a {
   background-color: var(--gray-black-800);
   position: relative;
   cursor: pointer;
-  transition: 3s ease-in;
-
+  transition: 0.5s ease-in;
 }
 
 #themeToggleCirlce {
